...
            // -----------------------------------------

            OutlinedTextField(
                value = viewModel.comment.value,
                onValueChange = { viewModel.comment.value = it },
                placeholder = {
                    Text("Escreve o teu comentário...")
                },
                modifier = Modifier.fillMaxWidth(),
                maxLines = 4
            )

            // -----------------------------------------
...
                    CircularProgressIndicator(
                        modifier = Modifier.size(18.dp),
                        color = Color.White,
                        strokeWidth = 2.dp
                    )
                } else {
                    Text("Enviar avaliação")
                }
            }
        }
    }
}

