...
        when {
            loading -> Box(Modifier.fillMaxSize().padding(padding), Alignment.Center) {
                CircularProgressIndicator(color = Color.Yellow)
            }

            error != null -> Box(Modifier.fillMaxSize(), Alignment.Center) {
                Text(error ?: "Erro", color = Color.Red)
            }

            else -> {
                if (accordions.isEmpty()) {

                    Box(
...
